<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_completed"
        android:title="@string/completed"

        />

    <item
        android:id="@+id/menu_pendings"
        android:title="@string/earrings" />

    <item android:id="@+id/menu_all"
        android:title="@string/all" />

    <item
        android:id="@+id/menu_my_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/my_info"
        android:iconTint="?attr/colorButtonNormal"
        app:showAsAction="ifRoom"/>

    <item
        android:icon="@android:drawable/ic_menu_add"
        android:iconTint="?attr/colorButtonNormal"
        app:showAsAction="always"
        android:id="@+id/menu_new_task"
        android:title="@string/new_task" />
</menu>