<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textAlignment="textStart"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/in_task"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textMultiLine"
        android:hint="@string/write_here"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="16dp"/>

</LinearLayout>